# ghcide-starter

./: CHANGELOG.md  LICENSE  README.md  default.nix  ghcide-starter.cabal  hie.yaml  shell.nix
nix/: nixpkgs.nix  sources.json
src/: Lib.hs
test/: Test.hs
