cabal-version:          2.4
name:                   ghcide-starter
version:                0.1.0.0
-- synopsis:
-- description:
-- bug-reports:
license:                MIT
license-file:           LICENSE
author:                 NAME
maintainer:             EMAIL
-- copyright:
-- category:
build-type:             Simple
extra-source-files:     CHANGELOG.md


library
  default-language:     Haskell2010
  hs-source-dirs:       src
  exposed-modules:      Lib
                        
  -- other-modules:
  -- other-extensions:
  build-depends:        base >=4.12 && <4.13
  ghc-options:          -Werror -Wall -j4


executable myapp
  default-language:     Haskell2010
  hs-source-dirs:       bin
  main-is:              Main.hs
  -- other-extensions:
  build-depends:        base >=4.12 && <4.13,
                        ghcide-starter
  ghc-options:          -Werror -Wall -j4


test-suite mytest
  hs-source-dirs:       test
  main-is:              Test.hs
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  build-depends:        base ^>=4.12.0.0,
                        tasty,
                        tasty-hunit,
                        tasty-smallcheck

  ghc-options:          -Werror -Wall -j4
